--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,30 +14,34 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif-smallcaps "
+        android:gravity="center"
+        android:paddingBottom="50dp"
+        android:paddingTop="50dp"
         android:text="@string/find_a_movie"
         android:textColor="#2FD4FF"
-        android:textSize="25sp"
-        android:fontFamily="sans-serif-smallcaps "
-        android:paddingBottom="50dp"
-        android:paddingTop="50dp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:textSize="25sp" />
 
+    <EditText
+        android:id="@+id/search_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:scrollbars="vertical"/>
+
     <Button
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
+        android:id="@+id/search_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#2FD4FF"
         android:fontFamily="sans-serif"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
         android:text="@string/search_now"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="20sp" />
+    
 
 </LinearLayout>
