--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -21,8 +21,8 @@
             android:id="@+id/movie_title_details_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="50dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textSize="50dp" />
 
         <TextView
             android:id="@+id/movie_overview_details_tv"
